--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "lisk-wallet",
+  "name": "lisk-transaction-platform",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
